--- a/.github/workflows/zombienet_polkadot.yml
+++ b/.github/workflows/zombienet_polkadot.yml
@@ -20,6 +20,7 @@ env:
   X_INFRA_INSTANCE: "spot"
   # don't retry sdk tests
   NEXTEST_RETRIES: 0
+  FLAKY_TESTS: "zombienet-polkadot-coretime-revenue"
 
 # only run if we have changes in [subtrate, polkadot] directories or this workflow.
 jobs:
@@ -525,18 +526,39 @@ jobs:
   #         local-dir: "$LOCAL_DIR/misc"
 
 
-
-
-
-
-
-
-
-
-
-  zombienet-polkadot-functional-spam-statement-distribution-requests:
+  #
+  # Malus
+  #
+  zombienet-polkadot-malus-0001-dispute-valid:
     needs: [preflight]
-    if: ${{ needs.preflight.outputs.changes_substrate || needs.preflight.outputs.changes_polkadot }}
+    if: ${{ needs.preflight.outputs.changes_substrate || needs.preflight.outputs.changes_cumulus || needs.preflight.outputs.changes_polkadot }}
+    runs-on: ${{ needs.preflight.outputs.ZOMBIENET_RUNNER }} # NOTE: should be zombienet-arc-runner (without quotes)
+    timeout-minutes: 60
+    container:
+      image: ${{ needs.preflight.outputs.ZOMBIENET_IMAGE }}
+    env:
+      ZOMBIENET_INTEGRATION_TEST_IMAGE: "${{ needs.preflight.outputs.TEMP_IMAGES_BASE }}/polkadot-debug:${{ needs.preflight.outputs.DOCKER_IMAGES_VERSION }}"
+      COL_IMAGE: "${{ needs.preflight.outputs.TEMP_IMAGES_BASE }}/colander:${{ needs.preflight.outputs.DOCKER_IMAGES_VERSION }}"
+      MALUS_IMAGE: "${{ needs.preflight.outputs.TEMP_IMAGES_BASE }}/malus:${{ needs.preflight.outputs.DOCKER_IMAGES_VERSION }}"
+      DEBUG: ${{ needs.preflight.outputs.DEBUG }}
+      LOCAL_DIR: "./polkadot/node/malus"
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: zombienet_test
+        uses: ./.github/actions/zombienet
+        with:
+          test: "0001-dispute-valid-block.zndsl"
+          local-dir: "$LOCAL_DIR/integrationtests"
+
+  #
+  # sdk tests
+  #
+
+  zombienet-polkadot-coretime-revenue:
+    needs: [preflight]
+    if: ${{ needs.preflight.outputs.changes_substrate || needs.preflight.outputs.changes_polkadot }} && ${{ ! contains(vars.FLAKY_TESTS, github.job) }}
     runs-on: ${{ needs.preflight.outputs.ZOMBIENET_RUNNER }} # NOTE: should be zombienet-arc-runner (without quotes)
     timeout-minutes: 60
     container:
@@ -548,47 +570,44 @@ jobs:
       MALUS_IMAGE: "${{ needs.preflight.outputs.TEMP_IMAGES_BASE }}/malus:${{ needs.preflight.outputs.DOCKER_IMAGES_VERSION }}"
       RUST_LOG: ${{ needs.preflight.outputs.RUST_LOG }}
       ZOMBIE_PROVIDER: ${{ needs.preflight.outputs.ZOMBIE_PROVIDER }}
-      # don't retry sdk tests
-      NEXTEST_RETRIES: 0
 
     steps:
-      # - name: k8s_auth
-      #   shell: bash
-      #   run: |
-      #     . /home/nonroot/zombie-net/scripts/ci/run-test-local-env-manager.sh
-      #     k8s_auth
-
       - name: Checkout
         uses: actions/checkout@v4
 
       - name: zombienet_test
         uses: ./.github/actions/zombienet-sdk
         with:
+          gh-token: ${{ secrets.GITHUB_TOKEN }}
+          build-id: ${{ needs.preflight.outputs.BUILD_RUN_ID }}
+          ref-slug: ${{ needs.preflight.outputs.SOURCE_REF_SLUG }}
+          test: "smoke::coretime_revenue::coretime_revenue_test"
+          prefix: "polkadot"
+
+  zombienet-polkadot-functional-spam-statement-distribution-requests:
+    needs: [preflight]
+    if: ${{ needs.preflight.outputs.changes_substrate || needs.preflight.outputs.changes_polkadot }} && ${{ ! contains(vars.FLAKY_TESTS, github.job) }}
+    runs-on: ${{ needs.preflight.outputs.ZOMBIENET_RUNNER }} # NOTE: should be zombienet-arc-runner (without quotes)
+    timeout-minutes: 60
+    container:
+      image: ${{ needs.preflight.outputs.ZOMBIENET_IMAGE }}
+    env:
+      # sdk tests are looking for POLKADOT_IMAGE
+      POLKADOT_IMAGE: "${{ needs.preflight.outputs.TEMP_IMAGES_BASE }}/polkadot-debug:${{ needs.preflight.outputs.DOCKER_IMAGES_VERSION }}"
+      COL_IMAGE: "${{ needs.preflight.outputs.TEMP_IMAGES_BASE }}/colander:${{ needs.preflight.outputs.DOCKER_IMAGES_VERSION }}"
+      MALUS_IMAGE: "${{ needs.preflight.outputs.TEMP_IMAGES_BASE }}/malus:${{ needs.preflight.outputs.DOCKER_IMAGES_VERSION }}"
+      RUST_LOG: ${{ needs.preflight.outputs.RUST_LOG }}
+      ZOMBIE_PROVIDER: ${{ needs.preflight.outputs.ZOMBIE_PROVIDER }}
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: zombienet_test
+        uses: ./.github/actions/zombienet-sdk
+        with:
+          gh-token: ${{ secrets.GITHUB_TOKEN }}
           build-id: ${{ needs.preflight.outputs.BUILD_RUN_ID }}
           ref-slug: ${{ needs.preflight.outputs.SOURCE_REF_SLUG }}
           test: "functional::spam_statement_distribution_requests::spam_statement_distribution_requests_test"
           prefix: "polkadot"
-
-      # - uses: actions/download-artifact@v4.1.8
-      #   with:
-      #     name: prepare-polkadot-zombienet-artifacts-${{ needs.preflight.outputs.SOURCE_REF_SLUG }}
-      #     github-token: ${{ secrets.GITHUB_TOKEN }}
-      #     run-id: ${{ needs.preflight.outputs.BUILD_RUN_ID }}
-
-      # - name: tar
-      #   run: tar -xvf artifacts.tar
-
-      # - name: script
-      #   run: |
-      #     echo "POLKADOT_IMAGE: $POLKADOT_IMAGE"
-      #     echo "COL_IMAGE: $COL_IMAGE"
-      #     echo "MALUS_IMAGE: $MALUS_IMAGE"
-      #     ls -ltr ./artifacts
-      #     cargo nextest run --archive-file ./artifacts/polkadot-zombienet-tests.tar.zst --no-capture -- functional::spam_statement_distribution_requests::spam_statement_distribution_requests_test
-
-      # - name: upload logs
-      #   uses: actions/upload-artifact@v4
-      #   with:
-      #     name: zombienet-logs-${{ github.job }}-${{ github.sha }}
-      #     path: |
-      #       /tmp/zombie*/logs/*
