pallet-xcm: add support to authorize aliases (#6336)
Add calls to pallet-xcm for adding and removing authorization for a
certain `aliaser` location to alias into the caller `origin`.

`pallet-xcm` also exposes an `AuthorizedAliases` filter implementation
usable with `xcm_executor::Config::Aliasers` filter to easily allow
runtimes to plug in the explicitly authorized aliases using the calls
above.

Usually useful to allow your local account to be aliased into from a
remote location also under your control (like your account on another
chain).

For example, `Alice` on `Para42` can do _something_ on Asset Hub without
having to transfer fees from `Para42`, but instead use her local Asset
Hub account:
```rust
// called by Alice on Para42
pallet_xcm::send(
	Location::new(1, Parachain(1000)),
	Xcm(vec![
		AliasOrigin(AliceOnAH),
		WithdrawAsset(fees),
		PayFees(fees),
		DoWhatever
	])
);
```

Part of [Empowered cross-chain
origins](https://github.com/paritytech/polkadot-sdk/issues/6054).

Fixes [XCM: Arbitrary Origin Aliases
#722](https://github.com/paritytech/polkadot-sdk/issues/722)

---------

Co-authored-by: command-bot <>
Co-authored-by: Francisco Aguirre <franciscoaguirreperez@gmail.com>
Co-authored-by: cmd[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/cumulus/parachains/runtimes/testing/penpal/Cargo.toml
+++ b/cumulus/parachains/runtimes/testing/penpal/Cargo.toml
@@ -81,6 +81,7 @@ pallet-message-queue = { workspace = true }
 parachain-info = { workspace = true }
 parachains-common = { workspace = true }
 snowbridge-inbound-queue-primitives = { workspace = true }
+testnet-parachains-constants = { features = ["westend"], workspace = true }
 
 primitive-types = { workspace = true, default-features = false, features = [
 	"codec",
@@ -144,6 +145,7 @@ std = [
 	"sp-transaction-pool/std",
 	"sp-version/std",
 	"substrate-wasm-builder",
+	"testnet-parachains-constants/std",
 	"xcm-builder/std",
 	"xcm-executor/std",
 	"xcm-runtime-apis/std",
