--- a/polkadot/xcm/docs/Cargo.toml
+++ b/polkadot/xcm/docs/Cargo.toml
@@ -30,7 +30,7 @@ pallet-message-queue = { workspace = true, default-features = true }
 
 # For building docs
 docify = { workspace = true }
-simple-mermaid = { git = "https://github.com/kianenigma/simple-mermaid.git", branch = "main" }
+simple-mermaid = { version = "0.1.1" }
 
 [dev-dependencies]
 test-log = { workspace = true }
