--- a/cumulus/pallets/parachain-system/Cargo.toml
+++ b/cumulus/pallets/parachain-system/Cargo.toml
@@ -55,7 +55,9 @@ rand = { workspace = true, default-features = true }
 trie-standardmap = { workspace = true }
 
 # Substrate
+sc-consensus = { workspace = true }
 sc-client-api = { workspace = true, default-features = true }
+sp-api = { workspace = true, default-features = true }
 sp-consensus-slots = { workspace = true, default-features = true }
 sp-crypto-hashing = { workspace = true, default-features = true }
 sp-keyring = { workspace = true, default-features = true }
